--- a/charts/rfe-pipelines/templates/rfe-oci-publish-content-task.yaml
+++ b/charts/rfe-pipelines/templates/rfe-oci-publish-content-task.yaml
@@ -29,8 +29,8 @@ spec:
           cd tooling/ansible
           ansible-galaxy collection install -r collections/requirements.yaml
           ansible-playbook \
-            -e quay_image_path=$(params.image-path) \
-            -e quay_image_tag=$(params.image-tag) \
+            -e oci_image_path=$(params.image-path) \
+            -e oci_image_tag=$(params.image-tag) \
             -e skip_free_space_protection=$(params.skip-free-space-protection) \
             -e content_path_output_file=$(results.content-path.path) \
             playbooks/oci-publish-content.yaml
