Added debug logging

--- a/ansible/roles/oci-push-image/tasks/main.yaml
+++ b/ansible/roles/oci-push-image/tasks/main.yaml
@@ -97,6 +97,7 @@
   ansible.builtin.command:
     argv:
       - "skopeo"
+      - "--debug"
       - "copy"
       - "--command-timeout=10m"
       - "--dest-authfile=/var/secrets/publisher/.dockerconfigjson"
