--- a/charts/bootstrap/values.yaml
+++ b/charts/bootstrap/values.yaml
@@ -152,7 +152,7 @@ application-manager:
                         destinationNamespace: openshift-storage
                         values:
                           operator:
-                            channel: stable-4.9
+                            channel: stable-4.13
                             installPlanApproval: Automatic
                             name: odf-operator
                             source: redhat-operators
@@ -205,7 +205,7 @@ application-manager:
                           argocd.argoproj.io/sync-wave: "0"
                         values:
                           operator:
-                            channel: alpha
+                            channel: beta
                             installPlanApproval: Automatic
                             name: pulp-operator
                             source: community-operators
@@ -217,7 +217,7 @@ application-manager:
                           argocd.argoproj.io/sync-wave: "0"
                         values:
                           operator:
-                            channel: stable-3.6
+                            channel: stable-3.8
                             installPlanApproval: Automatic
                             name: quay-operator
                             source: redhat-operators
