--- a/charts/bootstrap/values.yaml
+++ b/charts/bootstrap/values.yaml
@@ -191,7 +191,7 @@ application-manager:
                           argocd.argoproj.io/sync-wave: "0"
                         values:
                           operator:
-                            channel: stable
+                            channel: latest
                             installPlanApproval: Automatic
                             name: openshift-pipelines-operator-rh
                             source: redhat-operators
@@ -210,6 +210,8 @@ application-manager:
                             name: pulp-operator
                             source: community-operators
                             sourceNamespace: openshift-marketplace
+                          operatorgroup:
+                            create: false
                       quay-operator:
                         name: quay-operator
                         path: charts/operator
