--- a/charts/odf/values.yaml
+++ b/charts/odf/values.yaml
@@ -1,1 +1,13 @@
 ---
+noobaa_cleanuppolicy:
+  allowNoobaaDeletion: true
+noobaa_coreresources:
+  requests:
+    cpu: 100m
+    memory: 1Gi
+noobaa_dbresources:
+  requests:
+    cpu: 100m
+    memory: 1Gi
+noobaa_dbtype: postgres
+noobaa_name: noobaa
