Pulp API pulp.pulpproject.org->repo-manager.pulpproject.org.

--- a/charts/pulp/templates/pulp.yaml
+++ b/charts/pulp/templates/pulp.yaml
@@ -1,4 +1,4 @@
-apiVersion: pulp.pulpproject.org/v1beta2
+apiVersion: repo-manager.pulpproject.org/v1beta2
 kind: Pulp
 metadata:
   name: {{ template "common.names.fullname" . }}
