--- a/ansible/roles/openshift-image-builder-imi/tasks/main.yaml
+++ b/ansible/roles/openshift-image-builder-imi/tasks/main.yaml
@@ -1,14 +1,14 @@
 - name: Query VirtualMachineInstances
   community.kubernetes.k8s_info:
     api_key: "{{ lookup('file', '/var/run/secrets/kubernetes.io/serviceaccount/token') }}"
-    api_version: kubevirt.io/v1alpha3
+    api_version: kubevirt.io/v1
     ca_cert: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
     host: https://kubernetes.default.svc
     kind: VirtualMachineInstance
     label_selectors:
       - app=image-builder
     namespace: rfe
-    validate_certs: yes
+    validate_certs: true
   delay: 10
   register: vmi_results
   retries: 60
