Updating image-builder-content-sources to support updates composer-cli JSON output.

--- a/ansible/roles/image-builder-content-sources/tasks/remove-existing-sources.yaml
+++ b/ansible/roles/image-builder-content-sources/tasks/remove-existing-sources.yaml
@@ -5,7 +5,7 @@
 
 - name: Create CSV of Existing Content Sources
   ansible.builtin.set_fact:
-    existing_sources_csv: "{{ (existing_sources.stdout | from_json).sources | join(',') }}"
+    existing_sources_csv: "{{ (existing_sources.stdout | from_json | first).body.sources | join(',') }}"
 
 - name: Remove Applicable Existing Content Sources
   block:
@@ -13,12 +13,12 @@
       ansible.builtin.command: >
         composer-cli -j sources info {{ existing_sources_csv }}
       register: existing_sources_detail
-    
+
     - name: Remove Existing Content Sources
       ansible.builtin.command: >
         composer-cli sources delete {{ item.id }}
-      loop: "{{ (existing_sources_detail.stdout | from_json | json_query('sources.[*]'))[0] }}"
+      loop: "{{ (existing_sources_detail.stdout | from_json | first | json_query('body.sources.[*]'))[0] }}"
       when:
         - item.system == false
   when:
-    - (existing_sources.stdout | from_json).sources | count > 0
+    - (existing_sources.stdout | from_json | first).body.sources | count > 0
