Linting. Updating oci-build-image role (composer-cli JSON change).

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,8 @@
 [defaults]
-roles_path=roles
-collections_paths=collections
-
+callback_whitelist = profile_tasks
+collections_paths = collections
 host_key_checking = False
 retry_files_enabled = False
-callback_whitelist = profile_tasks
+roles_path = roles
+stdout_callback = community.general.diy
+
