--- a/ansible/collections/requirements.yaml
+++ b/ansible/collections/requirements.yaml
@@ -9,3 +9,5 @@ collections:
   - name: community.kubernetes
     source: https://galaxy.ansible.com
     version: ">=1.2.0,<2.0.0"
+  - name: infra.osbuild
+    source: https://galaxy.ansible.com
